[project]
name = "heal-data-sync"
version = "0.1.0"
description = "End-to-end multi-agent RAG system for clinical research data processing."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"

dependencies = [
    "openai>=1.3.5",
    "langgraph>=0.1.0",
    "langchain>=0.1.10",
    "qdrant-client>=1.6.0",
    "langsmith>=0.0.60",
    "ragas>=0.0.8",
    "chainlit>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0"
]

[build-system]
requires = ["uv"]
build-backend = "uv.pip"
